--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,5 @@
 package = "@netlify/plugin-sitemap"
 
   [plugins.inputs]
-  buildDir = "publish"
-  # disable pretty URLS and keep `index.html` & trailing `.html` file references in paths
-  prettyURLs = false
+  buildDir = "/"
+ 
