--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,27 @@ package = "@netlify/plugin-sitemap"
 
 [plugins.inputs]
   buildDir = "/"
+  
+  [build]
+  publish = "/"
+
+[[plugins]]
+  package = "netlify-plugin-submit-sitemap"
+
+	[plugins.inputs]
+
+	# The base url of your site (optional, default = main URL set in Netlify)
+	baseUrl = "https://sajjad.gq"
+
+	# Path to the sitemap URL (optional, default = /sitemap.xml)
+	sitemapPath = "/sitemap.html"
+
+	# Enabled providers to submit sitemap to (optional, default = 'google', 'bing', 'yandex'). Possible providers are currently only 'google', 'bing', 'yandex'.
+	providers = [
+		"google",
+		"bing",
+		"yandex"
+	]
 
   
  
