--- a/netlify.toml
+++ b/netlify.toml
@@ -34,16 +34,25 @@ package = "@netlify/plugin-sitemap"
 [[plugins]]
 package = "netlify-plugin-image-optim"
 
-[build]
-  publish = "/"
-
 [[plugins]]
-  package = "netlify-plugin-gatsby-cache"
-  
-  [build]
-  publish = "/sitemap/"
+  package = "netlify-plugin-inline-source"
 
-[[plugins]]
-  package = "netlify-plugin-gridsome-cache"
-  
+  # All inputs are optional, so you can omit this section.
+  # Defaults are shown below.
+  # You can also refer to the `inline-source` documentation: https://github.com/popeindustries/inline-source#usage.
+  [plugins.inputs]
+    # Attribute used to parse sources. All tags will be parsed if set to `false`.
+    attribute = "inline"
+
+    # Enable/disable compression of inlined content.
+    compress = true
+
+    # Maintain leading whitespace when `compress` is `false`.
+    pretty = false
+
+    # Disable inlining based on tag, type, and/or format.
+    ignore = []
+
+    # Convert `<img inline src="*.svg" />` to `<img>` and not `<svg>`.
+    svgAsImage = false
  
